Fix: Custom images palette overlapped by inspector [6297875]

--- a/web/static/theme/theme-designer.less
+++ b/web/static/theme/theme-designer.less
@@ -265,7 +265,7 @@
 }
 
 #palette-container {
-    padding-bottom: 15px;
+    padding-bottom: 60px;
     .clearfix;
 }
 
